--- a/index.html
+++ b/index.html
@@ -1,9 +1,93 @@
-<!doctype html>
-<html>
-  <head>
-    <title>This is the title of the webpage!</title>
-  </head>
-  <body>
-    <p>This is an example paragraph. Anything in the <strong>body</strong> tag will appear on the page, just like this <strong>p</strong> tag and its contents.</p>
-  </body>
-</html>
+<div style="
+    max-width: 750px;
+    margin: 5px auto;
+    padding: 25px 25px;
+    border: 1px solid #000000;
+    border-radius: 15px;
+    background: #ffffff;
+    box-shadow: 0 6px 18px rgba(0,0,0,0.06);
+">
+<script>
+  window.MathJax = {
+    tex: {
+      inlineMath: [['$', '$'], ['\\(', '\\)']],
+      displayMath: [['$$', '$$'], ['\\[', '\\]']]
+    }
+  };
+</script>
+<script async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/3.2.2/es5/tex-mml-chtml.js"></script>
+<title>
+Home
+</title>
+<h1 id="sayans-notes">Sayan’s Notes</h1>
+<p><img
+    src="main_image.png"
+    alt="Abstract visualization of computational physics and finite element analysis"
+    style="width:750px; height:180px; border-radius:8px;"
+/></p>
+<nav style="display:flex; gap:20px; padding:12px 0; border-bottom:1px solid #000000; flex-wrap:wrap;">
+<a href="index.html" style="text-decoration:none; font-weight:600;">Home</a>
+<a href="/notes/" style="text-decoration:none;">Notes</a>
+<a href="/about/" style="text-decoration:none;">About</a>
+<a href="contact.html" style="text-decoration:none;">Contact</a>
+</nav>
+<h2 id="welcome">👋 Welcome</h2>
+<p>Welcome to <strong>Your Website Title</strong>.<br />
+This site is a place where I share <strong>[what you do / what the site
+offers]</strong>.</p>
+<p>Use this space for a short introduction that answers: - Who this site
+is for - What problem it solves or value it provides - Why someone
+should keep reading</p>
+<hr />
+<h2 id="recent-articles">Recent articles</h2>
+<div style="
+  max-width: 1000px;
+  margin: 18px auto;
+  padding: 6px 0 6px 18px;
+  border-left: 3px solid #4f46e5;
+">
+<h3 style="margin: 0 0 6px 0; font-size: 1.25rem; color: #111827;">
+Recent Changes in Global Warming
+</h3>
+<div
+style="font-size: 0.8rem; color: #6b7280; margin-bottom: 12px; font-style: italic;">
+<p>Feb 2026 · Climate Science · 6 min read</p>
+</div>
+<p style="margin: 0 0 14px 0; font-size: 0.95rem; line-height: 1.55; color: #1f2937;">
+This article summarizes recent observations and model‑based insights
+into global temperature trends, atmospheric forcing mechanisms, and
+their implications for long‑term climate projections. <span
+class="math inline">\(v^2 = u^2 + 2 a s\)</span>
+</p>
+<p><a href="/"
+style="font-size: 0.85rem; color: #2563eb; text-decoration: none; font-weight: 500;">
+Read more → </a></p>
+</div>
+<div style="
+  max-width: 1000px;
+  margin: 18px auto;
+  padding: 6px 0 6px 18px;
+  border-left: 3px solid #4f46e5;
+">
+<h3 style="margin: 0 0 6px 0; font-size: 1.25rem; color: #111827;">
+Recent Changes in Global Warming 02
+</h3>
+<div
+style="font-size: 0.8rem; color: #6b7280; margin-bottom: 12px; font-style: italic;">
+<p>Feb 2026 · Climate Science · 6 min read</p>
+</div>
+<p style="margin: 0 0 14px 0; font-size: 0.95rem; line-height: 1.55; color: #1f2937;">
+This article summarizes recent observations and model‑based insights
+into global temperature trends, atmospheric forcing mechanisms, and
+their implications for long‑term climate projections.
+</p>
+<p><a href="/"
+style="font-size: 0.85rem; color: #2563eb; text-decoration: none; font-weight: 500;">
+Read more → </a></p>
+</div>
+<hr />
+<footer style="text-align: right; font-size: 0.7rem; color: #696c70; font-style: italic">
+Maintained by <a href="/about/">Sayan Batabyal</a> · Last updated on 13
+Feb 2026
+</footer>
+</div>
